--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm">
       <div class="container-fluid px-25">
-        <a class="navbar-brand d-none d-md-block" href="#">
+        <a class="navbar-brand d-none d-md-block" href="index.html">
           <img src="assets/logo.png" alt="" />
         </a>
         <a class="navbar-brand d-block d-md-none" href="#">
@@ -33,7 +33,7 @@
         <div class="ms-auto ms-md-0 d-block d-md-none me-2">
           <a
             class="text-login fw-bold text-decoration-none text-center btn btn-outline-darkblue px-3"
-            href="#"
+            href="dashboard.html"
           >
             Login
           </a>
@@ -99,7 +99,7 @@
         <div class="mx-auto ms-md-0 d-none d-md-block">
           <a
             class="navbar-text text-login fw-bold text-decoration-none text-center btn btn-outline-darkblue px-4 w-100"
-            href="#"
+            href="dashboard.html"
           >
             Login
           </a>
