--- a/src/market.html
+++ b/src/market.html
@@ -166,7 +166,7 @@
           </div>
         </div>
         <!-- end input hero -->
-        <div class="row row-cols-3 justify-content-between mt-4 gy-4">
+        <!-- <div class="row row-cols-3 justify-content-between mt-4 gy-4">
           <div class="statistikContent p-3" style="width: 32.5%">
             <div class="vertikal-border">
               <div class="ps-2">
@@ -203,8 +203,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <!-- <div class="px-3 py-5 mt-3 statistikContent">
+        </div> -->
+        <div class="px-3 py-5 mt-3 statistikContent">
           <h5 class="text-white fw-bold fs-1 mb-4">Statistik</h5>
           <div class="row row-cols-3">
             <div class="col">
@@ -253,7 +253,7 @@
               <span>Nilai</span>
             </div>
           </div>
-        </div> -->
+        </div>
         <div class="mainContent container-fluid mt-5">
           <div class="card p-3">
             <div class="d-block d-md-flex justify-content-between">
