fixing layout prefensi

--- a/src/prefensi.html
+++ b/src/prefensi.html
@@ -167,16 +167,19 @@
         </div>
         <!-- end input hero -->
 
-        <div class="container-fluid mt-5 prefensiGraph">
-          <div class="card py-5 mb-5">
-            <div class="w-75 mx-auto mt-5">
-              <img
-                src="assets/prefensi-udang-2.png"
-                class="mx-auto w-100 mb-5"
-                alt=""
-              />
+        <div class="container mt-5">
+          <div class="card py-5 mb-5 prefensiGraph ps-4 container">
+            <div class="mt-5 mx-auto">
+              <div class="mx-auto">
+                <img
+                  src="assets/prefensi-udang-2.png"
+                  class="mx-auto mb-5"
+                  alt=""
+                />
+              </div>
+
               <hr />
-              <p class="fs-3">
+              <p class="fs-6">
                 Total produk [udang beku] yang di ekspor indonesia terhadap pasar [US] adalah sebesar [xxx] Ton atau setara dengan [xx]
                 % dari produk impor [udanh beku] di [US]
               </p>
