--- a/src/proyeksi.html
+++ b/src/proyeksi.html
@@ -169,7 +169,7 @@
 
         <div class="mt-5">
           <div class="card p-3 mb-5">
-            <img src="assets/proyeksi-bulanan.png" width="95%" alt="" />
+            <img src="assets/proyeksi-bulanan.png" alt="" />
           </div>
           <div class="card p-3">
             <img src="assets/proyeksi-tahunan.png" alt="" />
