--- a/src/market.html
+++ b/src/market.html
@@ -213,7 +213,7 @@
                 <p>Juta</p>
               </div>
               <span>Nilai</span>
-              <hr />
+              <div class="col-hr"></div>
             </div>
             <div class="col">
               <div class="d-flex align-items-center gap-3">
@@ -221,7 +221,7 @@
                 <p>Juta</p>
               </div>
               <span>Nilai</span>
-              <hr />
+              <div class="col-hr"></div>
             </div>
             <div class="col">
               <div class="d-flex align-items-center gap-3">
@@ -229,7 +229,7 @@
                 <p>Juta</p>
               </div>
               <span>Nilai</span>
-              <hr />
+              <div class="col-hr"></div>
             </div>
             <div class="col">
               <div class="d-flex align-items-center gap-3">
